03_K8s/실습소스/07_ingress/app1.yaml
# app1.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deployment

spec:
  replicas: 3
  selector:
    matchLabels:
      app: web


  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: nginx-container
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        command: ["sh", "-c", "echo '<h1>app1-deployment</h1>' >  /usr/share/nginx/html/index.html   && nginx -g 'daemon off;'"]

---

apiVersion: v1
kind: Service
metadata:
  name: app1-service
spec:
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 80
  type:
    ClusterIP
