03_K8s/실습소스/07_ingress/app2.yaml
# app2.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-deployment

spec:
  replicas: 3
  selector:
    matchLabels:
      app: web2


  template:
    metadata:
      labels:
        app: web2
    spec:
      containers:
      - name: nginx-container
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        command: ["sh", "-c", "echo '<h1>app2-deployment</h1>' >  /usr/share/nginx/html/index.html   && nginx -g 'daemon off;'"]

---

apiVersion: v1
kind: Service
metadata:
  name: app2-service
spec:
  selector:
    app: web2
  ports:
    - port: 80
      targetPort: 80
  type:
    ClusterIP
