03_K8s/실습소스/07_ingress/app-ingress-host.yaml
#aapp-ingress-host.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress-host

spec:
  ingressClassName: nginx
  rules:
  - host: app1.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: app1-service
            port:
              number: 80

  - host: app2.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: app2-service
            port:
              number: 80
